tests/core/snapshots/auth-multiple.md_22.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "a_and_b": "data",
      "a_or_b": "data",
      "b_or_c": "data",
      "c_or_a": "data",
      "default": "data"
    }
  }
}
