tests/core/snapshots/auth-multiple.md_23.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "b_and_c": "data",
      "a_or_b": "data",
      "b_or_c": "data",
      "c_or_a": "data",
      "default": "data"
    }
  }
}
