tests/core/snapshots/auth-multiple.md_9.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "default": "data"
    }
  }
}
