tests/core/snapshots/auth-multiple.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  a_and_b: String
  b_and_c: String
  c_and_a: String
  default: String
}

schema {
  query: Query
}
