tests/core/snapshots/auth-protected-without-auth.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "@protected operator is used but there is no @link definitions for auth providers",
    "trace": [
      "Query",
      "data",
      "@protected"
    ],
    "description": null
  }
]
