tests/core/snapshots/auth-validation-errors.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Auth provider x not found",
    "trace": [
      "Foo",
      "@protected"
    ],
    "description": null
  },
  {
    "message": "Auth provider b not found",
    "trace": [
      "Query",
      "default",
      "@protected"
    ],
    "description": null
  },
  {
    "message": "Auth provider c not found",
    "trace": [
      "Query",
      "default",
      "@protected"
    ],
    "description": null
  }
]
