tests/core/snapshots/auth-validations.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Auth provider z not found",
    "trace": [
      "Baz",
      "x",
      "@protected"
    ],
    "description": null
  },
  {
    "message": "Auth provider y not found",
    "trace": [
      "Baz",
      "y",
      "@protected"
    ],
    "description": null
  },
  {
    "message": "Auth provider x not found",
    "trace": [
      "Baz",
      "z",
      "@protected"
    ],
    "description": null
  },
  {
    "message": "Auth provider x not found",
    "trace": [
      "Foo",
      "@protected"
    ],
    "description": null
  },
  {
    "message": "Auth provider x not found",
    "trace": [
      "Foo",
      "baz",
      "@protected"
    ],
    "description": null
  },
  {
    "message": "Auth provider y not found",
    "trace": [
      "Foo",
      "baz",
      "@protected"
    ],
    "description": null
  },
  {
    "message": "Auth provider b not found",
    "trace": [
      "Query",
      "default",
      "@protected"
    ],
    "description": null
  },
  {
    "message": "Auth provider c not found",
    "trace": [
      "Query",
      "default",
      "@protected"
    ],
    "description": null
  },
  {
    "message": "Auth provider z not found",
    "trace": [
      "Zoo",
      "a",
      "@protected"
    ],
    "description": null
  }
]
